crates/rome_cli/tests/snapshots/main_commands_check/fs_error_dereferenced_symlink.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  


```

# Emitted Messages

```block
<TEMP_DIR>/check_rome_test_broken_symlink/broken_symlink internalError/fs ━━━━━━━━━━━━━━━━━━━━

  ! Dereferenced symlink
  
  i Biome encountered a file system entry that is a broken symbolic link: <TEMP_DIR>/check_rome_test_broken_symlink/broken_symlink
  

```

```block
Checked 0 file(s) in <TIME>
```


